--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/HubPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/HubPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="com.dkhalife.apps.redmine.UWP.HubPage"
+    x:Class="com.dkhalife.apps.redmine.uwp.HubPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:com.dkhalife.apps.redmine.UWP"
+    xmlns:local="using:com.dkhalife.apps.redmine.uwp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -249,6 +249,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <RelativePanel Background="{ThemeResource AppBarBackgroundThemeBrush}" VerticalAlignment="Top">
@@ -261,16 +262,14 @@
             </Button>
         </RelativePanel>
 
-        <StackPanel Grid.Row="1">
-            <StackPanel>
-                <!--TextBlock>Updating:</>
-                <ProgressBar IsIndeterminate="True"></ProgressBar-->
-
-                <Frame Name="SubPage" />
-            </StackPanel>
+        <StackPanel Grid.Row="1" Margin="10" Grid.RowSpan="2">
+            <TextBlock Margin="0,0,0,5">Updating:</TextBlock>
+            <ProgressBar IsIndeterminate="True"></ProgressBar>
         </StackPanel>
 
-        <SplitView Name="Menu" DisplayMode="CompactOverlay" OpenPaneLength="200" CompactPaneLength="0" Grid.RowSpan="2">
+        <Frame Grid.Row="2" Name="SubPage" />
+
+        <SplitView Name="Menu" DisplayMode="CompactOverlay" OpenPaneLength="200" CompactPaneLength="0" Grid.RowSpan="3">
             <SplitView.Pane>
                 <StackPanel Orientation="Vertical">
                     <AutoSuggestBox Margin="0,20,0,20" Width="170" PlaceholderText="Search" QueryIcon="Find" Style="{StaticResource AutoSuggestBoxStyle}"></AutoSuggestBox>
@@ -287,7 +286,7 @@
                                 <TextBlock Margin="10,0,0,0">Issues</TextBlock>
                             </StackPanel>
                         </ListBoxItem>
-                        <ListBoxItem Tapped="Queries_Tapped">
+                        <ListBoxItem Tapped="Queries_Tapped" Name="QueriesButton">
                             <StackPanel Orientation="Horizontal">
                                 <SymbolIcon Symbol="Filter" />
                                 <TextBlock Margin="10,0,0,0">Queries</TextBlock>
