--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/IssuesPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/IssuesPage.xaml
@@ -1,15 +1,16 @@
 ﻿<Page
-    x:Class="com.dkhalife.apps.redmine.UWP.IssuesPage"
+    x:Class="com.dkhalife.apps.redmine.uwp.IssuesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:com.dkhalife.apps.redmine.uwp"
     xmlns:r="using:com.dkhalife.apps.redmine"
+    xmlns:llm="using:LLM"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Page.Resources>
-        <CollectionViewSource x:Name="IssuesList" x:Key="IssuesList" IsSourceGrouped="True" />
+        <CollectionViewSource x:Name="IssuesList" IsSourceGrouped="True" />
 
         <DataTemplate x:Name="IssuesListTemplate" x:DataType="r:Issue">
             <Grid Margin="0,10,0,10">
@@ -52,17 +53,26 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <TextBlock Text="{x:Bind FilterDescription}" Margin="10" />
 
-        <ListView Grid.Row="1" ItemsSource="{Binding Source={StaticResource IssuesList}}" ItemTemplate="{StaticResource IssuesListTemplate}" SelectionChanged="OpenIssue" HorizontalContentAlignment="Stretch">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>
+        <llm:LLMListView Grid.Row="1"  
+                         HorizontalContentAlignment="Stretch"
+                         ItemsSource="{x:Bind IssuesList.View}"
+                         ItemTemplate="{StaticResource IssuesListTemplate}"
+                         ShowsScrollingPlaceholders="True" Tapped="OpenIssue"
+                         ItemSwipeTriggerComplete="ItemSwipeTriggerComplete"
+                         ItemLeftSwipeMode="Expand"  
+                         ItemLeftSwipeMaxLength="180"
+                         ItemLeftActionRateForSwipeLength="0.4" 
+                         ItemRightSwipeMode="Collapse" 
+                         ItemRightSwipeMaxLength="180"
+                         ItemRightActionRateForSwipeLength="0.4">
 
             <ListView.GroupStyle>
-                <GroupStyle >
+                <GroupStyle>
                     <GroupStyle.HeaderTemplate>
                         <DataTemplate x:DataType="local:GroupedList">
                             <TextBlock Text="{x:Bind Key}" 
@@ -71,6 +81,57 @@
                     </GroupStyle.HeaderTemplate>
                 </GroupStyle>
             </ListView.GroupStyle>
-        </ListView>
+
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </ListView.ItemContainerStyle>
+            
+            <llm:LLMListView.ItemLeftSwipeContentTemplate>
+                <DataTemplate>
+                    <Grid Background="LightGray">
+                        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                            <StackPanel.RenderTransform>
+                                <TranslateTransform/>
+                            </StackPanel.RenderTransform>
+                            <SymbolIcon  Margin="10,0,0,0" Symbol="Accept" />
+                            <TextBlock Margin="10,0,0,0" Text="Mark Closed" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </llm:LLMListView.ItemLeftSwipeContentTemplate>
+
+            <llm:LLMListView.ItemRightSwipeContentTemplate>
+                <DataTemplate>
+                    <Grid Background="LightBlue">
+                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                            <StackPanel.RenderTransform>
+                                <TranslateTransform/>
+                            </StackPanel.RenderTransform>
+                            <TextBlock Margin="0,0,10,0" Text="Contact Assignee" VerticalAlignment="Center" />
+                            <SymbolIcon  Margin="0,0,10,0" Symbol="Contact2" />
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </llm:LLMListView.ItemRightSwipeContentTemplate>
+        </llm:LLMListView>
     </Grid>
+
+    <Page.BottomAppBar>
+        <CommandBar ClosedDisplayMode="Compact">
+            <CommandBar.PrimaryCommands>
+                <AppBarButton Icon="Bullets" Label="Select" />
+                <AppBarButton Icon="Add" Label="New" />
+                <AppBarButton Icon="Accept" Label="Close" />
+                <AppBarButton Icon="Filter" Label="Filter" />
+                <AppBarButton Icon="Sort" Label="Sort" />
+                </CommandBar.PrimaryCommands>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Icon="Bookmarks" Label="Group" />
+                <AppBarButton Icon="Refresh" Label="Refresh" />
+                <AppBarButton Icon="Sync" Label="Pending Updates" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
+    </Page.BottomAppBar>
 </Page>
