--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/UsersPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/UsersPage.xaml
@@ -1,9 +1,9 @@
 ﻿<Page
-    x:Class="com.dkhalife.apps.redmine.UWP.UsersPage"
+    x:Class="com.dkhalife.apps.redmine.uwp.UsersPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:r="using:com.dkhalife.apps.redmine"
-    xmlns:local="using:com.dkhalife.apps.redmine.UWP"
+    xmlns:local="using:com.dkhalife.apps.redmine.uwp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
